[modify] add event&model example.

--- a/src/app/components/bar/template.html
+++ b/src/app/components/bar/template.html
@@ -1,1 +1,4 @@
-<p>this is bar!</p>
+<span>
+  <p>this is bar!</p><br />
+  <span v-if="$route.params.name"> name={{$route.params.name}}</span>
+</span>
