[modify] patch example

--- a/src/app/components/alert/template.html
+++ b/src/app/components/alert/template.html
@@ -1,4 +1,5 @@
 <span>
+<h4>this is alert!</h4>
 <div class="input-group">
   <input type="textbox" class="form-control" @keyup.enter="$alert($event.target.value)"  v-model="message" placeholder="<message> + enter"></input>
   <div class="input-group-btn">
