--- a/src/app/mixins/modal/template.html
+++ b/src/app/mixins/modal/template.html
@@ -1,21 +1,23 @@
 <div class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <slot name="header">
+      <form ref="modalForm" class="form-group">
+        <div class="modal-header">
+          <slot name="header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title"><slot name="title">{{title}}</slot></h4>
-        </slot>
-      </div>
-      <div class="modal-body">
-        <slot></slot>
-      </div>
-      <div class="modal-footer">
-        <slot name="footer">
+          </slot>
+        </div>
+        <div class="modal-body">
+          <slot></slot>
+        </div>
+        <div class="modal-footer">
+          <slot name="footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" @click="ok">Ok</button>
-        </slot>
-      </div>
+          <button type="submit" class="btn btn-primary" @click="ok">Ok</button>
+          </slot>
+        </div>
+      </form>
     </div>
   </div>
 </div>
