[add] table example

--- a/src/app/components/dashboard/template.html
+++ b/src/app/components/dashboard/template.html
@@ -13,10 +13,13 @@
       <div id="navbar-collapse" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li>
-            <router-link :to="{name:'list'}">List</router-link>
+          <router-link :to="{name:'demo-list'}">List</router-link>
           </li>
           <li>
-            <router-link :to="{name:'alert'}">Alert</router-link>
+          <router-link :to="{name:'demo-table'}">Table</router-link>
+          </li>
+          <li>
+          <router-link :to="{name:'demo-alert'}">Alert</router-link>
           </li>
         </ul>
         <form class="navbar-form navbar-right">
